[package]
name = "social"
version = "0.1.0"
authors = ["Ryan McGrath <ryan@rymc.io>"]
edition = "2018"

[dependencies]
oauth-client = "0.4"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
chrono = "*"
dotenv = "*"
reqwest = "*"
linkify = "0.3.1"
regex = "*"
lazy_static = "*"
chrono-humanize = "0.0.11"
